{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 216,
  "lineage": "bf51b65e-538f-0a9b-8bab-bb4b3f15baec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a9909ed8af648373",
            "arn": "arn:aws:ec2:eu-west-3:144410073734:instance/i-089bf28a1274e8224",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089bf28a1274e8224",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "budget-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0779f50750a46eacf"
              }
            ],
            "primary_network_interface_id": "eni-0779f50750a46eacf",
            "private_dns": "ip-10-0-1-52.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.52",
            "public_ip": "13.38.82.42",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06da0d2871b836ae7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0734da1c70ef89d26",
            "tags": {
              "Name": "backend-server"
            },
            "tags_all": {
              "Name": "backend-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0895250a644e71b4c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "144410073734",
            "id": "i-089bf28a1274e8224",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:144410073734:internet-gateway/igw-0801d5238528131e9",
            "id": "igw-0801d5238528131e9",
            "owner_id": "144410073734",
            "region": "eu-west-3",
            "tags": {
              "Name": "budget-app-igw"
            },
            "tags_all": {
              "Name": "budget-app-igw"
            },
            "vpc_id": "vpc-0aa70b09169acf3d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "144410073734",
            "id": "igw-0801d5238528131e9",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:144410073734:route-table/rtb-08e2e8ac24c5a9668",
            "id": "rtb-08e2e8ac24c5a9668",
            "owner_id": "144410073734",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0801d5238528131e9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "budget-app-public-rt"
            },
            "tags_all": {
              "Name": "budget-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa70b09169acf3d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "144410073734",
            "id": "rtb-08e2e8ac24c5a9668",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eecc9c8896798a8e",
            "region": "eu-west-3",
            "route_table_id": "rtb-08e2e8ac24c5a9668",
            "subnet_id": "subnet-0734da1c70ef89d26"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "144410073734",
            "id": "rtbassoc-0eecc9c8896798a8e",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:144410073734:security-group/sg-0895250a644e71b4c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0895250a644e71b4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260501172552517100000001",
            "name_prefix": "terraform-",
            "owner_id": "144410073734",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa70b09169acf3d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "144410073734",
            "id": "sg-0895250a644e71b4c",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:144410073734:security-group/sg-0f82b26589761a8ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f82b26589761a8ba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0895250a644e71b4c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20260501172554657200000003",
            "name_prefix": "terraform-",
            "owner_id": "144410073734",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa70b09169acf3d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "144410073734",
            "id": "sg-0f82b26589761a8ba",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:144410073734:subnet/subnet-02fdd46ad9c2008fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fdd46ad9c2008fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144410073734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "vpc_id": "vpc-0aa70b09169acf3d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "144410073734",
            "id": "subnet-02fdd46ad9c2008fc",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:144410073734:subnet/subnet-057bf94cf0fb7b5cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057bf94cf0fb7b5cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144410073734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "vpc_id": "vpc-0aa70b09169acf3d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "144410073734",
            "id": "subnet-057bf94cf0fb7b5cf",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:144410073734:subnet/subnet-0734da1c70ef89d26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0734da1c70ef89d26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "144410073734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "budget-public-subnet"
            },
            "tags_all": {
              "Name": "budget-public-subnet"
            },
            "vpc_id": "vpc-0aa70b09169acf3d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "144410073734",
            "id": "subnet-0734da1c70ef89d26",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:144410073734:vpc/vpc-0aa70b09169acf3d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d3aaf5c00d2e3069",
            "default_route_table_id": "rtb-0cb5373313acc1e6c",
            "default_security_group_id": "sg-09f8b1caf6cb838e4",
            "dhcp_options_id": "dopt-098d395d71deddccd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa70b09169acf3d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb5373313acc1e6c",
            "owner_id": "144410073734",
            "region": "eu-west-3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "144410073734",
            "id": "vpc-0aa70b09169acf3d5",
            "region": "eu-west-3"
          }
        }
      ]
    }
  ]
}